<resources>
    <string name="app_name">GreenRoad</string>
    <string name="acceder">Acceder</string>
    <string name="registrarse">Registrarse</string>
    <string name="contrase_a">Contraseña</string>
    <string name="email">Email</string>
    <string name="introduce_tu_email">Introduce tu Email</string>
    <string name="introduce_el_email_en_el_cual_estas_registrado_y_luego_apreta_el_boton_de_confirmar">Introduce el Email en el cual estas registrado y luego apreta el boton de confirmar.</string>
    <string name="haz_olvidado_tu_contrase_a">haz olvidado tu contraseña?</string>
    <string name="confirmar">Confirmar</string>
    <string name="todo">TODO</string>
    <string name="logo">TODO</string>
    <string name="has_olvidado_la_contra">Has olvidado la contraseña?</string>
    <string name="ingresar_sn_registrarse">Ingresar sn registrarse</string>
    <string name="greenroadLogoP">GreenRoad</string>
    <string name="selecciona_qu_quieres_reciclar">SELECCIONA QUÉ QUIERES RECICLAR</string>
    <string name="Vidrios" />
    <string name="vidrios">Vidrios</string>
    <string name="pagina1">\n\n
<b><i>¿Qué es?</i></b>
\n\n
El vidrio es un material inorgánico, frágil, duro, transparente y amorfo, es decir, que no presenta una estructura regular o bien determinada. El mismo se obtiene a partir de la fusión de la arena silícea con carbonato de sodio y caliza y luego se lo moldea a elevadas temperaturas para obtener su apariencia final.
\n\n
<b><i>¿Qué beneficios brinda el reciclaje?</i></b>
\n\n
 Al incorporar residuos de vidrio al proceso de fabricación de nuevos productos de vidrio, se logra disminuir considerablemente la temperatura que se requiere para fundir la materia prima, resultando en ahorros considerables de energía y disminución de emisiones de polvo que surgen de la fabricación con 100% material virgen.
\n\n
<b><i>Tips para la reutilización</i></b>
\n\n
<b>.</b>Usarlas como floreros de decoración, centros de mesa y en la cocina con plantas aromáticas.
\n\n
<b>.</b>Ponerlas en el baño, con palitos de sándalo que mantengan un olor fresco.
\n\n
<b>.</b>Como zapatero, colocándolas con tablas de madera u otro material.
\n\n
<b>.</b>Decorándolas con una fotografía a modo de etiqueta de la botella de vino y hacer un regalo de lo más original.
\n\n
<b>.</b>Como lámparas, con bombillas o luces pequeñas e, incluso, portavelas.
\n\n


</string>
    <string name="Aceites_Domiciliarios">Aceites Domiciliarios</string>
    <string name="TituloPayCa">Papel y Carton</string>
<string name="pagina2">\n\n
<b><i>¿Qué son?</i></b>
\n\n
 es un material compuesto por celulosa que se transforma en pasta en procesos mecánicos o químicos. Dependiendo del proceso a que se someta, se da origen a distintos tipos de papel, como por ejemplo para escribir, dibujar, imprimir y envolver, entre otros.
\n\n
<b><i>¿Qué beneficios brinda su reciclaje?</i></b>
\n\n
 Las ventajas de usar papel reciclado y sobres reciclados son múltiples y es bueno estar informado y tenerlas en cuenta, incluyen el ahorro de energía, agua y espacio en vertederos. El reciclaje de papel reduce las emisiones de gases de efecto invernadero y la fibra reciclada es un recurso sostenible y económico para fabricar nuevos productos de papel.
La fabricación de pulpa de papel reciclada, en comparación con la generación de pulpa de árboles y otras plantas para fabricar nuevos productos de papel, consume menos energía y agua.
El reciclaje de papel reduce el metano y el dióxido de carbono en la atmósfera.
preserva árboles y bosques. Cada tonelada de papel reciclado salva aproximadamente 17 árboles.


\n\n
<b><i>Tips para poder reutilización</i></b>
\n\n
<b>.</b>Reciclar cajas de cereales en archivadores:puedes recortarlas y decorarlas y así obtener unos organizadores de papel o archivadores hechos a tu gusto y sin gastar casi nada de dinero.
\n\n
<b>.</b>Una lámpara hecha de papel
\n\n
<b>.</b>Un marco de fotos con papel reciclado
\n\n
<b>.</b> para reciclar cajas de cartón es reunir unas cuantas de diferentes tamaños y construir un organizador de pared

\n\n
<b>.</b>Casita de muñecas : con cajas de diferentes tamaños que puedan encajar entre sí es posible construir una preciosa casita de muñecas si forramos las cajas.
\n\n
</string>
    <string name="tituloMetales">Metales</string>
    <string name="Pagina3">\n\n
<b><i>¿Qué es?</i></b>
\n\n
Cuerpo simple, generalmente sólido a temperatura ambiente, que es buen conductor del calor y de la electricidad y que tiene un brillo característico; se emplea, a menudo en aleación con otro metal, en la fabricación de numerosos objetos.
\n\n
<b><i>¿Qué beneficios brinda el reciclaje?</i></b>
\n\n
 Utilizando acero reciclado en vez de minerales vírgenes, se logran grandes ventajas ambientales tales como reducción de la contaminación del aire y agua, menor generación de residuos y menor uso de energía.

        Asimismo, se conservan los recursos naturales, ecosistemas, y se prolonga la vida útil de los sitios de disposición final de residuos.

        Hoy en día, el acero es el principal material reciclado, por lo tanto existe todo un mercado desarrollado en torno al reciclaje de acero, con su consecuente generación de empleo. Son tan altos los ahorros generados por el reciclaje de acero que a nivel mundial esta actividad es considerada rentable.
\n\n
<b><i>Tips para poder reutilizar </i></b>
\n\n
<b>.</b>Lámpara con anillas de latas.
\n\n
<b>.</b>Cortina con latas de refresco.

\n\n
<b>.</b> Manualidades de Joyeria con lata de atún.
.
\n\n
<b>.</b>Comedero para pájaros con una lata de conserva.
\n\n
<b>.</b>Poder reciclar cables que no estemos utilizando\n\n
</string>
    <string name="tituloaceite">Aceites Domiciliarios</string>
    <string name="Pagina4">\n\n
<b><i>¿Qué es?</i></b>
\n\n
Son grasas de origen animal o vegetal (aceites de oliva, de semillas de girasol y otras, etc.) que, utilizados en el cocinado de alimentos en los ámbitos doméstico, centros e instituciones, hostelería, restauración y análogos
\n\n
<b><i>¿Qué beneficios brinda el reciclaje?</i></b>
\n\n
 El beneficio más notable y de sentido común del correcto reciclaje y recogida de aceite usado es su repercusión en el medioambiente. Pero también significa un gran ahorro a la hora de hacer reciclaje de aceite para reutilizar en calderas o calentadores; ya que constituye una fuente de combustible ideal.
Un aceite que no caduca y que si se mantiene limpio, puede utilizarse de forma indefinida, lo que a su vez reduce la producción de nuevo aceite.
Otros usos que derivan del reciclaje de aceite es la elaboración de velas, cremas naturales o jabones, lubricantes, pinturas, e incluso para generar energía eléctrica y la producción de biocombustibles como el biodiesel.

\n\n
<b><i>Tips para poder reutilizar </i></b>
\n\n
<b>.</b> Fabricar jabón  - fabricar jabón con aceite, sosa cáustica, agua y una gran variedad de aceites esenciales para dotarlo de aromas.
\n\n
<b>.</b> Fabricar velas -El procedimiento es muy sencillo, ya que el aceite quema tan bien como la cera


\n\n
<b>.</b> . Engrasar bisagras-Todo tipo de goznes, bisagras, charnelas o pernios puede necesitar en un momento determinado un toque de grasa para reducir el roce entre los herrajes.
.
\n\n
<b>.</b> Proteger los muebles-El aceite de freír filtrado es un perfecto protector de maderas -es importante que no estén barnizadas-

\n\n
<b>.</b> Fabricar cremas hidratantes- Nos bastará con unas láminas de cera de abejas, un tarro y el aceite debidamente reposado y filtrado.
\n\n
</string>
    <string name="TituloPilas">Pilas</string>
    <string name="Pagina5">\n\n
<b><i>¿Qué es?</i></b>
\n\n
Las pilas son dispositivos que permiten la obtención de energía eléctrica por transformación de la energía química. Las pilas se utilizan en transistores, juguetes, linternas, relojes, calculadoras, cámaras fotográficas, teléfonos móviles, etc. contienen algunos metales pesados como el mercurio, el cadmio o el plomo, que son potencialmente peligrosos para la salud y el medio ambiente. Por ello, se consideran residuos peligrosos y están sujetos a una recogida y tratamiento específicos.
\n\n
<b><i>¿Qué beneficios brinda el reciclaje?</i></b>
\n\n
 Mediante el reciclaje de las pilas domésticas se evita que los metales pesados que encierran en su interior acaben contaminando el medio ambiente. Las técnicas de tratamiento y reciclado varían dependiendo del tipo de pila. Por ejemplo, el mercurio de las de botón se recupera por calentamiento y posterior condensación de los gases mercúricos.
Para el reciclaje de las pilas convencionales existen diferentes posibilidades: pueden enterrarse en vertederos controlados o separarse  las partes metálicas de la fracción salina y posteriormente se trata de forma fisicoquímico para la recuperación del cinc, el manganeso y otros metales. En otras ocasiones se lleva a cabo la  incineración de las pilas y la recuperación por destilación del hierro, el níquel y el cadmio.

\n\n
<b><i>Tips para reciclarlo efectivamente</i></b>
\n\n
<b>.</b>No quemar, en absoluto, las pilas desgastadas.

\n\n
<b>.</b>Botar las pilas en los contenedores dispuestos para tal fin (algunos están en centro comerciales).
\n\n
<b>.</b> Llevar las pilas que no usamos a los centros ecológicos especializados.

.\n\n
<b>.</b>Sacar las pilas de los aparatos que no estemos usando.
\n\n
<b>.</b> No echar las pilas a la basura, ni enterrarlas.
\n\n
<b>.</b>Usar pilas recargables.
\n\n

</string>
    <string name="TituloPlastico">Plástico</string>
</resources>