<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#3FA13F"
            android:backgroundTint="#2F812F"
            android:backgroundTintMode="src_in"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="80dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/haz_olvidado_tu_contrase_a"
                android:textAlignment="center"
                android:textColor="#F8F8F8"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/introduce_el_email_en_el_cual_estas_registrado_y_luego_apreta_el_boton_de_confirmar"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:textStyle="bold|italic" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="80dp" />

            <EditText
                android:id="@+id/EmailForgot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:backgroundTint="@color/colorPrimaryDark"
                android:ems="10"
                android:foregroundTint="#FFFFFF"
                android:hint="@string/introduce_tu_email"
                android:inputType="textEmailAddress"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="70dp" />

            <Button
                android:id="@+id/buttonConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#9ADA51"
                android:text="@string/confirmar"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="17sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>